Use KConfig.WindowStateSaver to handle window sizing

BUG: 492229
FIXED-IN: 6.2.0 with Frameworks 6.6